--- a/index.css
+++ b/index.css
@@ -69,3 +69,41 @@ ul li:hover {
     background-color: #a6ff4d;
     cursor: pointer;
 }
+input{
+    width: 290px;
+}
+
+
+
+
+        .dropdown {
+            position: relative;
+            display: inline-block;
+          
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            min-width: 160px;
+            z-index: 1;
+         background-color: white;
+
+        }
+
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+              
+        }
+
+        .dropdown-content a:hover {
+            background-color: #ddd;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+        
