--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     font-family: 'Rubik', sans-serif;
@@ -20,7 +21,8 @@ img {
     margin: 0 auto;
 }
 
-input {
+input,
+select {
     color: #432000;
     background-color: #DCE1EB;
     border: 0;
@@ -30,10 +32,13 @@ input {
     text-align: center;
     font-family: 'Rubik', sans-serif;
     margin: 10px 0;
+    width: 290px;
 }
-#add-button{
+
+#add-button {
     text-align: center
 }
+
 button {
     color: #FDFDFD;
     background-color: #9de600;
@@ -48,7 +53,7 @@ button {
 button:hover {
     background-color: #00e600;
     cursor: pointer;
-    
+
 }
 
 ul {
@@ -61,7 +66,7 @@ ul {
 
 ul li {
     font-size: 20px;
-    background-color:#ccff99;
+    background-color: #ccff99;
     padding: 15px;
     border-radius: 8px;
     flex-grow: 1;
@@ -73,41 +78,37 @@ ul li:hover {
     background-color: #a6ff4d;
     cursor: pointer;
 }
-input{
-    width: 290px;
+
+
+
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+
 }
 
+.dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    z-index: 1;
+    background-color: white;
 
+}
 
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 
-        .dropdown {
-            position: relative;
-            display: inline-block;
-          
-        }
+}
 
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            min-width: 160px;
-            z-index: 1;
-         background-color: white;
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
 
-        }
-
-        .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-              
-        }
-
-        .dropdown-content a:hover {
-            background-color: #ddd;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-        
+.dropdown:hover .dropdown-content {
+    display: block;
+}
